--- a/index.html
+++ b/index.html
@@ -8,19 +8,43 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="header">
-        <h2>Header Logo</h2>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+    <div class="section-one">
+        <div class="header">
+            <h2>Header Logo</h2>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
         <div class="title-sign">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
             <button>Sign up</button>
         </div>
         <img src="url" alt="this is a placeholder for this image">
+    </div>
+    <div class="section-two">
+        <h2>Some random information</h2>
+        <div class="image-subtext">
+            <img src="url" alt="image1">
+            <img src="url" alt="image2">
+            <img src="url" alt="image3">
+            <img src="url" alt="image4">
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+            <p>This is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    <div class="section-three">
+        <p>This is going to be a quote of some form. It will look nice.</p>
+        <p>-Jordan Graf, himself.</p>
+    </div>
+    <div class="section-four">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up now!</p>
+        <button>Sign up</button>
     </div>
 
 </body>
