Add minor inline style to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
     
@@ -22,9 +23,9 @@
         </div>
         <div class="top-title">
         <div class="title-sign">
-                <h1>This website is awesome</h1>
+                <h1 style="font-size:48px; font-weight:extra-bold;">This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
-                <button>Sign up</button>
+                <button style="background-color:#3882F6";>Sign up</button>
             </div>
             <img src="url" class="top-photo" alt="this is a placeholder for this image">
         </div>
