Minor changes to format

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="title-sign">
                 <h1 style="font-size:48px; font-weight:extra-bold;">This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
-                <button style="background-color:#3882F6";>Sign up</button>
+                <button >Sign up</button>
             </div>
             <img src="url" class="top-photo" alt="this is a placeholder for this image">
         </div>
