--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="top-title">
         <div class="title-sign">
-                <h1 style="font-size:48px; font-weight:extra-bold;">This website is awesome</h1>
+                <h1 style="font-size:48px; font-weight:extra-bold;">This website is </h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
                 <button >Sign up</button>
             </div>
