--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="top-title">
         <div class="title-sign">
-                <h1 style="font-size:48px; font-weight:extra-bold;">This website is </h1>
+                <h1 style="font-size:48px; font-weight:extra-bold;">This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
                 <button >Sign up</button>
             </div>
@@ -40,14 +40,22 @@
     <div class="section-two">
         <h2>Some random information</h2>
         <div class="image-subtext">
-            <img src="url" alt="image1">
-            <img src="url" alt="image2">
-            <img src="url" alt="image3">
-            <img src="url" alt="image4">
-            <p>This is some subtext under an illustration or image</p>
-            <p>This is some subtext under an illustration or image</p>
-            <p>This is some subtext under an illustration or image</p>
-            <p>This is some subtext under an illustration or image</p>
+            <div class="image-box">
+                <img src="erobique.jpeg" alt="image1">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-box">
+                <img src="erobique.jpeg" alt="image2">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-box">
+                <img src="erobique.jpeg" alt="image3">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="image-box">
+                <img src="erobique.jpeg" alt="image4">
+                <p>This is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
    
