--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     
     <div class="section-one">
         <div class="header">
-            <h2 class = "top-logo">Header Logo</h2>
+            <h2 class = "top-logo">EROBIQUE PAGE</h2>
             <ul class="top-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="https://www.youtube.com/watch?v=BQEfO9sM4Ic">Wann Strahlst Du?</li></a>
+                <li><a href="https://www.youtube.com/watch?v=Wf0Z4sZe0_E">Easy Mobeasy</li></a>
+                <li><a href="https://www.youtube.com/watch?v=ZBhXiReDmkU">Urlaub in Italien</a></li>
             </ul>
         </div>
         <div class="top-title">
         <div class="title-sign">
                 <h1 style="font-size:48px; font-weight:extra-bold;">This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
+                <p>It is about Erobique. Please click some of the links!</p>
+                <p>You shan't be disappointed!</p>
                 <button >Sign up</button>
             </div>
             <img src="oliverpolakerobique_3_geraldvonforis-992x560.jpg" class="top-photo" alt="this is a placeholder for this image">
@@ -52,7 +53,7 @@
     </div>
    
     <div class="section-three">
-        <p>„Ein Soundtrack braucht nicht so viel“</p>
+        <p><em>„Ein Soundtrack braucht nicht so viel“</em></p>
         <p> - Erobique, himself.</p>
     </div>
     
@@ -67,7 +68,7 @@
     </div>
 
     <div class="footer">
-        <p> Design copyright The Odin Project. Erobique copyright Carsten Meyer </p>
+        <p class = copy-info> Design copyright The Odin Project. Erobique copyright Carsten Meyer </p>
     </div>
 </body>
 </html>
